--- a/about.html
+++ b/about.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=3909661950"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=4096872092" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=4008180995"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=55922537" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4243096916"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=4082730480" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=236388992" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -42,7 +42,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="gradient clearfix borderbox" id="page"><!-- group -->
     <div class="clearfix grpelem" id="ppu67883-3"><!-- column -->
      <div class="clearfix colelem" id="pu67883-3"><!-- group -->
-      <div class="clearfix grpelem shared_content" id="u67883-3" data-IBE-flags="txtStyleSrc" data-content-guid="u67883-3_content"><!-- content -->
+      <div class="gradient clearfix grpelem shared_content" id="u67883-3" data-IBE-flags="txtStyleSrc" data-content-guid="u67883-3_content"><!-- content -->
        <p>&nbsp;</p>
       </div>
       <nav class="MenuBar clearfix grpelem" id="menuu56290"><!-- horizontal box -->
@@ -82,43 +82,50 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clip_frame grpelem" id="u60864"><!-- image -->
        <img class="block temp_no_img_src" id="u60864_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9352941176470588" data-image-width="170" data-image-height="159" src="images/blank.gif?crc=4208392903"/>
       </div>
+     </div>
+     <div class="clearfix colelem shared_content" id="pu4003-4" data-content-guid="pu4003-4_content"><!-- group -->
       <!-- m_editable region-id="editable-static-tag-U4003-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
       <div class="clearfix grpelem shared_content" id="u4003-4" data-muse-uid="U4003" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u4003-4_content"><!-- content -->
        <p>About Reunion Hebrides</p>
       </div>
       <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U4004-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+      <div class="rounded-corners clearfix grpelem shared_content" id="u4004-46" data-muse-uid="U4004" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u4004-46_content"><!-- content -->
+       <p id="u4004">&nbsp;</p>
+       <p id="u4004-2">&nbsp;</p>
+       <p id="u4004-4">Background</p>
+       <p id="u4004-6">Text....</p>
+       <p id="u4004-7">&nbsp;</p>
+       <p id="u4004-8">&nbsp;</p>
+       <p id="u4004-10">The Organising Committee</p>
+       <p id="u4004-12">Text</p>
+       <p id="u4004-13">&nbsp;</p>
+       <p id="u4004-14">&nbsp;</p>
+       <p id="u4004-17"><span id="u4004-15">Chairperson:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mairi Macleod</p>
+       <p id="u4004-20"><span id="u4004-18">Vice-Chair: </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Carla Mackay</p>
+       <p id="u4004-23"><span id="u4004-21">Joint Treasurer:&nbsp;&nbsp;&nbsp; </span>Hannah Stewart</p>
+       <p id="u4004-26"><span id="u4004-24">Joint Treasurer:&nbsp;&nbsp;&nbsp; </span><span id="u4004-25">Christine Macintosh</span></p>
+       <p id="u4004-29"><span id="u4004-27">Secretary: </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mairi Mackenzie</p>
+       <p id="u4004-30">&nbsp;</p>
+       <p id="u4004-31">&nbsp;</p>
+       <p id="u4004-32">&nbsp;</p>
+       <p id="u4004-33">&nbsp;</p>
+       <p id="u4004-35">Supporting our Community</p>
+       <p id="u4004-36">&nbsp;</p>
+       <p id="u4004-38">&nbsp;Information on the charities we will be supporting along with logos for charities.</p>
+       <p id="u4004-39">&nbsp;</p>
+       <p id="u4004-40">&nbsp;</p>
+       <p id="u4004-41">&nbsp;</p>
+       <p id="u4004-42">&nbsp;</p>
+       <p id="u4004-43">&nbsp;</p>
+       <p id="u4004-44">&nbsp;</p>
+      </div>
+      <!-- /m_editable -->
      </div>
-     <!-- m_editable region-id="editable-static-tag-U4004-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="rounded-corners clearfix colelem shared_content" id="u4004-41" data-muse-uid="U4004" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u4004-41_content"><!-- content -->
-      <p id="u4004-2">Background</p>
-      <p id="u4004-4">Text....</p>
-      <p id="u4004-5">&nbsp;</p>
-      <p id="u4004-7">The Organising Committee</p>
-      <p id="u4004-9">Text</p>
-      <p id="u4004-10">&nbsp;</p>
-      <p id="u4004-13"><span id="u4004-11">Chairperson:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mairi Macleod</p>
-      <p id="u4004-16"><span id="u4004-14">Vice-Chair: </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Carla Mackay</p>
-      <p id="u4004-19"><span id="u4004-17">Joint Treasurer:&nbsp;&nbsp;&nbsp; </span>Hannah Stewart</p>
-      <p id="u4004-22"><span id="u4004-20">Joint Treasurer:&nbsp;&nbsp;&nbsp; </span><span id="u4004-21">Christine Macintosh</span></p>
-      <p id="u4004-25"><span id="u4004-23">Secretary: </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mairi Mackenzie</p>
-      <p id="u4004-26">&nbsp;</p>
-      <p id="u4004-27">&nbsp;</p>
-      <p id="u4004-28">&nbsp;</p>
-      <p id="u4004-30">Supporting our Community</p>
-      <p id="u4004-31">&nbsp;</p>
-      <p id="u4004-33">&nbsp;Information on the charities we will be supporting along with logos for charities.</p>
-      <p id="u4004-34">&nbsp;</p>
-      <p id="u4004-35">&nbsp;</p>
-      <p id="u4004-36">&nbsp;</p>
-      <p id="u4004-37">&nbsp;</p>
-      <p id="u4004-38">&nbsp;</p>
-      <p id="u4004-39">&nbsp;</p>
-     </div>
-     <!-- /m_editable -->
     </div>
     <div class="verticalspacer shared_content" data-offset-top="1139" data-content-above-spacer="1138" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
     <div class="browser_width grpelem" id="u144-bw">
-     <div id="u144"><!-- group -->
+     <div class="gradient" id="u144"><!-- group -->
       <div class="clearfix" id="u144_align_to_page">
        <div class="clearfix grpelem shared_content" id="u173-4" data-IBE-flags="txtStyleSrc" data-content-guid="u173-4_content"><!-- content -->
         <p>&nbsp;© 2018-2019 Lewis and Harris 40th Reunion Committee (2019). All Rights Reserved.</p>
@@ -135,7 +142,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="gradient clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <div class="clearfix grpelem temp_no_id" data-orig-id="ppu67883-3"><!-- column -->
      <div class="clearfix colelem temp_no_id" data-orig-id="pu67883-3"><!-- group -->
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u67883-3_content"><!-- placeholder node --></span>
+      <span class="gradient clearfix grpelem placeholder" data-placeholder-for="u67883-3_content"><!-- placeholder node --></span>
       <nav class="MenuBar clearfix grpelem temp_no_id" data-orig-id="menuu56290"><!-- horizontal box -->
        <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u56291"><!-- vertical box -->
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="index.html" data-href="page:U93" data-orig-id="u56292"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u56293-4"><!-- content --><span class="placeholder" data-placeholder-for="u56293-4_0_content"><!-- placeholder node --></span></div></a>
@@ -174,16 +181,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.937888198757764" data-image-width="161" data-image-height="151" data-orig-id="u60864_img" src="images/blank.gif?crc=4208392903"/>
       </div>
      </div>
-     <!-- m_editable region-id="editable-static-tag-U4003-BP_1160" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <span class="clearfix colelem placeholder" data-placeholder-for="u4003-4_content"><!-- placeholder node --></span>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U4004-BP_1160" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u4004-41_content"><!-- placeholder node --></span>
-     <!-- /m_editable -->
+     <span class="clearfix colelem placeholder" data-placeholder-for="pu4003-4_content"><!-- placeholder node --></span>
     </div>
     <span class="verticalspacer placeholder" data-placeholder-for="page_1_content"><!-- placeholder node --></span>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u144-bw">
-     <div class="temp_no_id" data-orig-id="u144"><!-- group -->
+     <div class="gradient temp_no_id" data-orig-id="u144"><!-- group -->
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
@@ -206,12 +208,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="111" height="104" data-orig-id="u60864_img" src="images/blank.gif?crc=4208392903"/>
       </div>
      </div>
-     <!-- m_editable region-id="editable-static-tag-U4003-BP_800" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <span class="clearfix colelem placeholder" data-placeholder-for="u4003-4_content"><!-- placeholder node --></span>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U4004-BP_800" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u4004-41_content"><!-- placeholder node --></span>
-     <!-- /m_editable -->
+     <span class="clearfix colelem placeholder" data-placeholder-for="pu4003-4_content"><!-- placeholder node --></span>
     </div>
     <span class="verticalspacer placeholder" data-placeholder-for="page_1_content"><!-- placeholder node --></span>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u144-bw">
@@ -240,7 +237,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <span class="clearfix colelem placeholder" data-placeholder-for="u4003-4_content"><!-- placeholder node --></span>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U4004-BP_500" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u4004-41_content"><!-- placeholder node --></span>
+     <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u4004-46_content"><!-- placeholder node --></span>
      <!-- /m_editable -->
     </div>
     <div class="verticalspacer" data-offset-top="1143" data-content-above-spacer="1142" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
