--- a/booking.html
+++ b/booking.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Booking</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=3909661950"/>
-  <link rel="stylesheet" type="text/css" href="css/booking.css?crc=4125636685" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=4008180995"/>
+  <link rel="stylesheet" type="text/css" href="css/booking.css?crc=4244027278" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_booking.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4243096916"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_booking.css?crc=3858575197" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_booking.css?crc=4217028527" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -82,16 +82,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clip_frame grpelem" id="u60864"><!-- image -->
        <img class="block temp_no_img_src" id="u60864_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9352941176470588" data-image-width="170" data-image-height="159" src="images/blank.gif?crc=4208392903"/>
       </div>
-      <!-- m_editable region-id="editable-static-tag-U12738-BP_infinity" template="booking.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-      <div class="rounded-corners clearfix grpelem shared_content" id="u12738-12" data-muse-uid="U12738" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u12738-12_content"><!-- content -->
-       <p id="u12738-2">Ticket Prices</p>
-       <p id="u12738-4">Friday Only - £55.00</p>
-       <p id="u12738-6">Saturday Only - £35.00</p>
-       <p id="u12738-8">Weekend Ticket (all events) - £85.00</p>
-       <p id="u12738-10">Add a Saturday Partner - £35.00</p>
-      </div>
-      <!-- /m_editable -->
      </div>
+     <!-- m_editable region-id="editable-static-tag-U12738-BP_infinity" template="booking.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="rounded-corners clearfix colelem shared_content" id="u12738-12" data-muse-uid="U12738" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u12738-12_content"><!-- content -->
+      <p id="u12738-2">Ticket Prices</p>
+      <p id="u12738-4">Friday Only - £55.00</p>
+      <p id="u12738-6">Saturday Only - £35.00</p>
+      <p id="u12738-8">Weekend Ticket (all events) - £85.00</p>
+      <p id="u12738-10">Add a Saturday Partner - £35.00</p>
+     </div>
+     <!-- /m_editable -->
      <div class="clearfix colelem shared_content" id="pu41354-6" data-content-guid="pu41354-6_content"><!-- group -->
       <!-- m_editable region-id="editable-static-tag-U41354-BP_infinity" template="booking.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
       <div class="rounded-corners clearfix grpelem" id="u41354-6" data-muse-uid="U41354" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
@@ -184,7 +184,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <p>&nbsp;</p>
     </div>
     <!-- /m_editable -->
-    <div class="verticalspacer shared_content" data-offset-top="1029" data-content-above-spacer="1027" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_4_content"></div>
+    <div class="verticalspacer shared_content" data-offset-top="1078" data-content-above-spacer="1076" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_4_content"></div>
     <div class="browser_width grpelem" id="u144-bw">
      <div id="u144"><!-- group -->
       <div class="clearfix" id="u144_align_to_page">
