--- a/memories.html
+++ b/memories.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Memories</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=3909661950"/>
-  <link rel="stylesheet" type="text/css" href="css/memories.css?crc=114173627" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=4008180995"/>
+  <link rel="stylesheet" type="text/css" href="css/memories.css?crc=535915637" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_memories.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4243096916"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_memories.css?crc=4097301613" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_memories.css?crc=4219072710" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -82,12 +82,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clip_frame grpelem" id="u60864"><!-- image -->
        <img class="block temp_no_img_src" id="u60864_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9352941176470588" data-image-width="170" data-image-height="159" src="images/blank.gif?crc=4208392903"/>
       </div>
-      <!-- m_editable region-id="editable-static-tag-U6080-BP_infinity" template="memories.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-      <div class="clearfix grpelem shared_content" id="u6080-4" data-muse-uid="U6080" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u6080-4_content"><!-- content -->
-       <p>School Photos</p>
-      </div>
-      <!-- /m_editable -->
      </div>
+     <!-- m_editable region-id="editable-static-tag-U6080-BP_infinity" template="memories.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix colelem shared_content" id="u6080-4" data-muse-uid="U6080" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u6080-4_content"><!-- content -->
+      <p>School Photos</p>
+     </div>
+     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U6081-BP_infinity" template="memories.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <div class="rounded-corners clearfix colelem shared_content" id="u6081-6" data-muse-uid="U6081" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u6081-6_content"><!-- content -->
       <p>Do you have old class photos from primary or secondary school that you'd be happy to share? If so, please e-mail them to us: <a class="nonblock" href="mailto:mail@reunionhebrides.com">mail@reunionhebrides.com</a></p>
