--- a/pay.html
+++ b/pay.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Pay</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=3909661950"/>
-  <link rel="stylesheet" type="text/css" href="css/pay.css?crc=3836806774" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=4008180995"/>
+  <link rel="stylesheet" type="text/css" href="css/pay.css?crc=4050351165" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_pay.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4243096916"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_pay.css?crc=56018529" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_pay.css?crc=218294617" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -82,12 +82,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clip_frame grpelem" id="u60864"><!-- image -->
        <img class="block temp_no_img_src" id="u60864_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9352941176470588" data-image-width="170" data-image-height="159" src="images/blank.gif?crc=4208392903"/>
       </div>
-      <!-- m_editable region-id="editable-static-tag-U8604-BP_infinity" template="pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-      <div class="clearfix grpelem shared_content" id="u8604-4" data-muse-uid="U8604" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u8604-4_content"><!-- content -->
-       <p>Paying for your tickets</p>
-      </div>
-      <!-- /m_editable -->
      </div>
+     <!-- m_editable region-id="editable-static-tag-U8604-BP_infinity" template="pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix colelem shared_content" id="u8604-4" data-muse-uid="U8604" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u8604-4_content"><!-- content -->
+      <p>Paying for your tickets</p>
+     </div>
+     <!-- /m_editable -->
      <div class="clearfix colelem shared_content" id="pu8610-3" data-content-guid="pu8610-3_content"><!-- group -->
       <!-- m_editable region-id="editable-static-tag-U8610-BP_infinity" template="pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
       <div class="rounded-corners clearfix grpelem shared_content" id="u8610-3" data-muse-uid="U8610" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u8610-3_content"><!-- content -->
